--- a/index.html
+++ b/index.html
@@ -76,17 +76,20 @@
     }
 
     .br-square2{
-      background-color: #F0F1EC;
       display: grid;
       grid-template-columns: 50px;
-      grid-template-rows: 140px;
+      grid-template-rows: 140px auto;
       gap: 9px;
     }
 
     .upper{
       background-color: #004592;
       border: solid, #000;
-      border-width: 0px 0px 20px ;
+      border-width: 0px 0px 10px ;
+    }
+
+    .lower{
+      background-color: #F0F1EC;
     }
 
 
@@ -110,6 +113,7 @@
       </div>
       <div class="br-square2">
         <div class="upper"></div>
+        <div class="lower"></div>
       </div>
 
     </div>
